doc: add documentation of order
